# Brainiac

./: .gitignore  README.md
brainiac/: README.md  pyproject.toml  teste.ipynb
brainiac/src/brainiac/: main copy.py  main.py
brainiac/src/brainiac/crews/behavior_planner/: crew.py
brainiac/src/brainiac/crews/behavior_planner/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/complex_thought_planner/: crew.py
brainiac/src/brainiac/crews/complex_thought_planner/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/decision_maker/: crew.py
brainiac/src/brainiac/crews/decision_maker/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/limbic_system/: crew.py
brainiac/src/brainiac/crews/limbic_system/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/personality_express_planner/: crew.py
brainiac/src/brainiac/crews/personality_express_planner/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/prefrontal_cortex/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/prefrontal_cortex_in/: crew.py
brainiac/src/brainiac/crews/prefrontal_cortex_in/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/prefrontal_cortex_out/: crew.py
brainiac/src/brainiac/crews/prefrontal_cortex_out/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/crews/social_behavior_modulator/: crew.py
brainiac/src/brainiac/crews/social_behavior_modulator/config/: agents.yaml  tasks.yaml
brainiac/src/brainiac/pipelines/: pipeline_behavior_planner.py  pipeline_cortex_in.py
langgraph/: brainiac-tools.ipynb  brainiac.ipynb  pyproject.toml
langgraph/agents/: behavior_planner.py  complex_thought_planner.py  decision_maker.py  personality_expression_planner.py  prefrontal_cortex.py  social_behavior_modulator.py
langgraph/agents/config/: models.py
langgraph/agents/models/: brain.py
langgraph/agents/prompts/: behavior_planner.py  complex_thought_planner.py  decision_maker.py  personality_expression_planner.py  prefrontal_cortex.py  social_behavior_modulator.py
langgraph/agents/src/: utils.py
langgraph/old/: brainiac.ipynb  supervisor.ipynb
left_hemisphere/: README.md  pyproject.toml
left_hemisphere/src/left_hemisphere/: main.py
right_hemisphere/: README.md  pyproject.toml
right_hemisphere/src/right_hemisphere/: main.py
