[tool.poetry]
name = "brainiac"
version = "0.1.0"
description = "brainiac using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
brainiac = "brainiac.main:main"
train = "brainiac.main:train"
replay = "brainiac.main:replay"
test = "brainiac.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
