[tool.poetry]
name = "left_hemisphere"
version = "0.1.0"
description = "left-hemisphere using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
left_hemisphere = "left_hemisphere.main:main"
train = "left_hemisphere.main:train"
replay = "left_hemisphere.main:replay"
test = "left_hemisphere.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
