[tool.poetry]
name = "right_hemisphere"
version = "0.1.0"
description = "right-hemisphere using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
right_hemisphere = "right_hemisphere.main:main"
train = "right_hemisphere.main:train"
replay = "right_hemisphere.main:replay"
test = "right_hemisphere.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
